# stanza

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  PLAN.md  README.md  deploy.sh  dev.sh  docker-compose.yml  update.sh
backend/: .env.example  Cargo.toml
backend/scripts/: seed.sh
backend/src/: db.rs  handlers.rs  main.rs  models.rs
docker/: DEPLOYMENT.md  docker-compose.yml
frontend/: .env.development  .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: HeaderMenu.css  HeaderMenu.tsx  LoginForm.tsx  MessageCard.css  MessageCard.tsx  MessageInput.css  MessageInput.tsx  SearchBar.css  SearchBar.tsx  SyncStatus.css  SyncStatus.tsx  ThemeToggle.css  ThemeToggle.tsx
frontend/src/components/icons/: DeleteIcon.tsx  EditIcon.tsx  LogoutIcon.tsx  MonitorIcon.tsx  MoonIcon.tsx  SettingsIcon.tsx  SunIcon.tsx
frontend/src/pages/: Feed.css  Feed.tsx  PostDetail.css  PostDetail.tsx  Settings.css  Settings.tsx
frontend/src/services/: api.ts  offlineStore.ts
frontend/src/stores/: authStore.ts  messagesStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: search.ts
