[package]
name = "dissipate-backend"
version = "0.1.0"
edition = "2021"
default-run = "dissipate-backend"

[lib]
name = "dissipate_backend"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
