[package]
name = "stanza-backend"
version = "0.1.0"
edition = "2021"
default-run = "stanza-backend"

[lib]
name = "stanza_backend"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate", "derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.6"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
